--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ body{
     font-family: 'adobe-garamond-pro', serif;
     font-style: normal;
     letter-spacing: 10%;
-    background-color: #F8F9FA;
+    background-color: #81643e;
     background-image: url("https://www.transparenttextures.com/patterns/cardboard-flat.png");
     https://www.transparenttextures.com/
     }
@@ -145,7 +145,7 @@ body{
     align-items: center;
     justify-content: center;
     position: relative;
-    color: #fff
+    color: rgb(255, 255, 255)
 }
 
 .bio-container {
@@ -195,9 +195,9 @@ body{
 
 .aficiones-panel {
     margin: 100px 0px;
-    background: #f5f5f5;
+    background: #ddc9c0;
     border-radius: 20px;
-    box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #444444;
 }
 
 .aficiones-review-left {
@@ -212,9 +212,9 @@ body{
 
 .aficiones-panel-left {
     margin: 100px 0px;
-    background: #f5f5f5;
+    background: #ddc9c0;
     border-radius: 20px;
-    box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #444444;
 }
 
 .bio-review {
@@ -228,9 +228,9 @@ body{
 
 .bio-panel {
     margin: 0px 0px;
-    background: #f5f5f5;
+    background: #ddc9c0;
     border-radius: 20px;
-    box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #444444;
 }
 
 .bio-review-left {
@@ -260,9 +260,9 @@ body{
 
 .bio-panel-left {
     margin: 50px 0px;
-    background: #f5f5f5;
+    background: #ddc9c0;
     border-radius: 20px;
-    box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #444444;
 }
 
 .rutina-image {
@@ -285,9 +285,9 @@ body{
 
 .rutina-panel{
     margin: 100px 0px;
-    background: #f5f5f5;
+    background: #ddc9c0;
     border-radius: 20px;
-    box-shadow: 5px 10px 8px #888888;
+    box-shadow: 5px 10px 8px #444444;
 
 .img-responsive {
     width: 100%;
